
class EstadoFoco
{
private:
    bool encendido;
public:
    EstadoFoco() { this->encendido = false ;
        

    }
    ~EstadoFoco() {}
};